--- a/templates/articles/details.html.twig
+++ b/templates/articles/details.html.twig
@@ -39,7 +39,7 @@
                 <a href="{{ path('app_article_edit', {id: article.id}) }}">Edit</a>
                 <form action="{{ path('app_article_delete', {id: article.id}) }}" method="post" style="display:inline;">
                     <input type="hidden" name="_method" value="DELETE">
-                    <button type="submit" onclick="return confirm('Are you sure you want to delete this article?');">Delete</button>
+                    <button type="submit" onclick="return confirm('Voulez-vous vraiment supprimer cet article?');">Delete</button>
                 </form>
             {% endif %}
         </div>
