--- a/templates/articles/edit.html.twig
+++ b/templates/articles/edit.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Article{% endblock %}
+{% block title %}Modifier l'article{% endblock %}
 
 {% block body %}
-    <h1>Edit Article</h1>
+    <h1>Modifier l'article</h1>
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <button type="submit">Save</button>
+        <button type="submit">Modifier</button>
     {{ form_end(form) }}
 {% endblock %}
