--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,6 +56,7 @@
                             <div class="dropdown-divider"></div>
                             <a href="{{ path('app_cart_index') }}">Mon Panier</a>
                             <a href="{{ path('app_profile') }}">Mon Profil</a>
+                            <a href="/sell">Vendre </a>
                             <a href="{{ path('app_logout') }}">Déconnexion</a>
                         </div>
                     </div>
